kubernetes/build-master.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-master
  labels:
    run: build-master
spec:
  ports:
  - port: 5000
    targetPort: prj-master-port
    protocol: TCP
    name: prjs-master-port
  - port: 8080
    targetPort: prj-hook-port
    protocol: TCP
    name: prjs-hook-port
  selector:
    run: build-master
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: build-master
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: build-master
    spec:
      containers:
        - name: build-master
          image: my-repo/build-server:latest
          ports:
            - containerPort: 5000
              name: prj-master-port
          volumeMounts:
            - name: build-ssh-keys-volume
              mountPath: /root/.ssh
            - name: docker-socket
              mountPath: /var/run/docker.sock
            - name: aws-keys-volume
              mountPath: /root/.aws
        - name: build-hook
          image: my-repo/hook-server:latest
          ports:
            - containerPort: 8080
              name: prj-hook-port
      volumes:
        - name: build-ssh-keys-volume
          secret:
            secretName: build-ssh-keys
            defaultMode: 256
        - name: aws-keys-volume
          secret:
            secretName: aws-keys
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
