kubernetes/default-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: default-http-backend
  labels:
    run: default-http-backend
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    run: default-http-backend
